# Photon-Chess-Engine

./: CMakeLists.txt  LICENSE  README.md  compile.bat  gui.py  index.html  play_photon.py  test.cpp  test_ply.cpp
.github/workflows/: bench.yml
engine/: attacks.cpp  attacks.h  board.cpp  board.h  eval.cpp  eval.h  main.cpp  movegen.cpp  movegen.h  search.cpp  search.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
tests/: perft_test.cpp
tools/: bench.cpp  selfplay.cpp
